# clearcli

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: main.yml
clearcli/: __init__.py  commands.py
docs/: Shell_wrapper_2.md  index.md  install_guide.md
expresscli/: __init__.py  commands.py  mock.py
tests/: test_expresscli.py
