[tool.poetry]
name = "clearcli"
version = "1.0.1"
description = "Build Command Line Interface with ease"
authors = ["Thomas Mahé <contact@tmahe.dev>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/thmahe/clearcli"
documentation = "https://clearcli.readthedocs.io/en/latest/"

keywords = [
    "argparse",
    "cli"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing :: Mocking"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
tox = "^3.20.1"
coverage = {version = "^6.0", python = "^3.7"}
mkdocs = "^1.3.0"
cleo = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
test = ["python3 -m unittest discover -v -s tests -t tests -p '*.py'"]
